# AI_Book

./: .gitignore  README.md  vercel.json
.github/workflows/: deploy-book.yml
.specify/memory/: constitution.md
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/agents/: rag_agent.py
backend/app/api/: chat.py
backend/app/core/: config.py
backend/app/db/: crud.py  models.py  neon.py
backend/app/rag/: embedder.py  ingest.py  retriever.py
backend/scripts/: ingest_book.py
book/: docusaurus.config.ts  package.json  pnpm-lock.yaml  sidebars.ts  tsconfig.json
book/docs/: intro.md
book/docs/capstone/: autonomous-humanoid-project.mdx
book/docs/module-1-ros2/: week-01-intro-physical-ai.mdx  week-02-embodied-intelligence.mdx  week-03-ros2-architecture.mdx  week-04-nodes-topics-services.mdx  week-05-ros2-packages.mdx
book/docs/module-2-simulation/: week-06-gazebo-setup.mdx  week-07-urdf-sdf.mdx
book/docs/module-3-isaac/: week-08-isaac-platform.mdx  week-09-perception-manipulation.mdx  week-10-sim-to-real.mdx
book/docs/module-4-vla/: week-11-humanoid-kinematics.mdx  week-12-bipedal-locomotion.mdx  week-13-conversational-robotics.mdx
specs/001-docusaurus-scaffold/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-book-content-chapters/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-dark-beige-theme/: plan.md  research.md  spec.md  tasks.md
specs/004-rag-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+40 files in other folders)
